--- a/.github/workflows/qokit-python-only-unix.yml
+++ b/.github/workflows/qokit-python-only-unix.yml
@@ -26,9 +26,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pipreqs black addheader pytest-cov pip-licenses
-    # - name: black check
-    #   run:  |
-    #       black --check .
+    - name: black check
+      run:  |
+          black --check .
     - name: pip install 
       run: |
         export QOKIT_PYTHON_ONLY=true 
