--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,11 @@ dependencies = [
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
-    'pytket==1.22.0',
-    'pytket-qiskit==0.46.0',
-    'pytket-quantinuum==0.25.0',
-    'qiskit==0.45.3',
-    'qiskit-finance==0.3.4',
-    'qiskit-ibmq-provider==0.20.2',
+    'pytket==1.37.0',
+    'pytket-qiskit>=0.59',
+    'pytket-quantinuum',
+    #'pytket-quantinuum==0.42.0',
+    'qiskit>=1.0',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
     'sympy>=1.12',
