--- a/.github/workflows/qokit-python-c.yml
+++ b/.github/workflows/qokit-python-c.yml
@@ -35,7 +35,7 @@ jobs:
           black --check .
     - name: pip install 
       run: |
-        export QOKIT_PYTHON_ONLY=True 
+        export QOKIT_PYTHON_ONLY=False
         pip install .
     - name: Run tests and coverage
       run: |
