--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,9 @@ dependencies = [
     'pytket==1.37.0',
     'docplex==2.28.240',
     'yfinance==0.2.49',
-    'pytket-qiskit>=0.59',
+    'pytket-qiskit==0.62',
     'pytket-quantinuum==0.42.0',
-    'qiskit>=1.0',
+    'qiskit==1.3.1',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
     'sympy>=1.12',
