--- a/.github/workflows/qokit-package.yml
+++ b/.github/workflows/qokit-package.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pipreqs black addheader pytest-cov pip-licenses types-pkg-resources==0.1.3
+        pip install pipreqs black==24.10.0 addheader pytest-cov pip-licenses types-pkg-resources==0.1.3
 
     - name: black check
       run:  |
