--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -31,6 +31,7 @@ jobs:
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v4
         with:
+          name: dist-${{ matrix.python }} - ${{matrix.os}}
           path: dist/*.tar.gz  
 
   upload_pypi:
