--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-24.10, macos-12, windows-2022]
+        os: [ubuntu-latest, macos-latest, windows-2022]
         python: ["cp311"]
 
     steps:
