--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,14 @@ requires-python = ">=3.10.0"
 dependencies = [
     'networkx==3.0.0',
     'importlib-resources>=5.2.2',
+    'numpy==1.26.4',
     'numba>=0.56.4,<1',
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
     'pytket==1.37.0',
     'docplex==2.28.240',
-    'yfinance==0.2.54',
+    'yfinance==0.2.49',
     'pytket-qiskit==0.62',
     'pytket-quantinuum==0.42.0',
     'qiskit==1.3.1',
@@ -35,6 +36,8 @@ dependencies = [
     'seaborn>=0.12.2',
     'sympy>=1.12',
     'tqdm>=4.65.0',
+    'nlopt==2.7.1',
+    'joblib==1.4.2',
 ]
 
 [project.optional-dependencies]
@@ -53,7 +56,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 160
-target-version = ['py310', 'py311']
+target-version = ['py38', 'py39', 'py310', 'py311']
 force-exclude = '''
 (
   /(
