--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     'seaborn>=0.12.2',
     'sympy>=1.12',
     'tqdm>=4.65.0',
-    'nlopt>=2.0.0',
+    'nlopt',
     'joblib==1.4.2',
 ]
 
