--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: ["cp311"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v4
