--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -9,11 +9,9 @@
 name: Upload Python Package test new
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+  pull_request:
 
-permissions:
-  contents: read
 
 jobs:
   release-build:
