--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     'pytket-qiskit==0.62',
     'pytket-quantinuum==0.42.0',
     'qiskit==1.3.1',
+    'qiskit-algorithms==0.3.1',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
     'sympy>=1.12',
