--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -35,10 +35,10 @@ jobs:
           python -m pip install build
           python -m build
 
-      - name: Upload distributions ${{matrix.os}}
+      - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
-          name: release-dists
+          name: release-dists ${{matrix.os}}
           path: dist/
 
   pypi-publish:
@@ -64,7 +64,7 @@ jobs:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
-          name: release-dists
+          name: release-dists ${{matrix.os}}
           path: dist/
 
       - name: Publish release distributions to PyPI
