--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python: ["cp310"]
+        os: [ubuntu-latest, macos-latest]
+        python: ["cp311"]
 
     steps:
       - uses: actions/checkout@v4
