--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
-          name: release-dists
+          name: release-dists-${{matrix.os}}
           path: dist/
 
   pypi-publish:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     needs:
       - release-build
     permissions:
@@ -64,7 +64,7 @@ jobs:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
-          name: release-dists 
+          name: release-dists-${{matrix.os}}
           path: dist/
 
       - name: Publish release distributions to PyPI
