--- a/.github/workflows/pypi-test-publish.yml
+++ b/.github/workflows/pypi-test-publish.yml
@@ -42,7 +42,7 @@ jobs:
           path: dist/
 
   pypi-publish:
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     needs:
       - release-build
     permissions:
@@ -64,7 +64,7 @@ jobs:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
-          name: release-dists-${{matrix.os}}
+          name: release-dists-ubuntu-latest
           path: dist/
 
       - name: Publish release distributions to PyPI
