--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     'importlib-resources>=5.2.2',
     'numpy==2.1.3',
     'numba>=0.56.4,<1',
+    'numba-cuda==0.14.1',
     'pandas>=2.0.1',
     'pathos>=0.3.0',
     'pytest>=7.3.1',
