--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     'pytket-qiskit==0.71.0',
     'pytket-quantinuum==0.45.0',
     'qiskit==2.1.1',
+    'qiskit_ibm_runtime==0.43.1',
     'scipy>=1.10.1',
     'seaborn>=0.12.2',
     'sympy>=1.12',
