--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     'networkx==3.0.0',
     'importlib-resources>=5.2.2',
     'numpy==2.1.3',
-    'numba>=0.56.4,<1',
+    'numba==0.62.1',
     'numba-cuda==0.14.1',
     'pandas>=2.0.1',
     'pathos>=0.3.0',
