--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build Wheels
         uses: pypa/cibuildwheel@v3.1.3
+        env:
+          CIBW_BUILD_FRONTEND: "build"
       - uses: actions/upload-artifact@v4
         with:
           path: ./wheelhouse/*.whl
