--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -11,8 +11,13 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python: ["cp311"]
+        include:
+          - os: ubuntu-latest
+            python: "cp311"
+            cibw_platform: linux
+          - os: macos-latest
+            python: "cp311"
+            cibw_platform: macos
 
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +25,7 @@ jobs:
         uses: pypa/cibuildwheel@v3.1.3
         env:
           CIBW_BUILD_FRONTEND: "build"
-          CIBW_PLATFORM: "linux"
+          CIBW_PLATFORM: ${{ matrix.cibw_platform }}
           CIBW_ARCHS: "x86_64"
           CIBW_SKIP: "pp*"
         with:
