--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,34 +7,27 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            python: "cp311"
-            cibw_platform: linux
-          - os: macos-latest
-            python: "cp311"
-            cibw_platform: macos
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
       - name: Build Wheels
-        uses: pypa/cibuildwheel@v3.1.3
+        uses: pypa/cibuildwheel@v2.16.5
         env:
-          CIBW_BUILD_FRONTEND: "build"
-          CIBW_PLATFORM: ${{ matrix.cibw_platform }}
-          CIBW_ARCHS: "x86_64"
-          CIBW_SKIP: "pp*"
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} || cp {wheel} {dest_dir}"
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel} || cp {wheel} {dest_dir}"
-        with:
-          output-dir: wheelhouse
+          CIBW_BUILD: "cp310-* cp311-*"
+          CIBW_ARCHS_LINUX: "x86_64"
+          CIBW_ARCHS_MACOS: "x86_64"
+          CIBW_SKIP: "pp* *-musllinux_*"
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.python }}-${{ matrix.os }}
+          name: wheels-${{ matrix.os }}
           path: wheelhouse/*.whl
 
   build_sdist:        
@@ -46,7 +39,7 @@ jobs:
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v4
         with:
-          name: sdist
+          name: dist-${{ matrix.python }} - ${{matrix.os}}
           path: dist/*.tar.gz  
 
   upload_pypi:
@@ -59,8 +52,8 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4.1.7
         with:
+          name: artifact
           path: dist
-          merge-multiple: true
       - uses: pypa/gh-action-pypi-publish@release/v1      
         with:
           user: __token__
